cloud-infra/tests/snapshots/snapshots__appconfig.snap
---
source: cloud-infra/tests/snapshots.rs
expression: synthesized
---
{
  "Metadata": {
    "app": "[AppConfigApp]",
    "cp": "[ConfigurationProfile]",
    "ds": "[DeploymentStrategy]",
    "env": "[Environment]"
  },
  "Resources": {
    "[AppConfigApp]": {
      "Properties": {
        "Name": "my-application"
      },
      "Type": "AWS::AppConfig::Application"
    },
    "[ConfigurationProfile]": {
      "Properties": {
        "ApplicationId": {
          "Ref": "[AppConfigApp]"
        },
        "LocationUri": "hosted",
        "Name": "config-profile"
      },
      "Type": "AWS::AppConfig::ConfigurationProfile"
    },
    "[DeploymentStrategy]": {
      "Properties": {
        "DeploymentDurationInMinutes": 0,
        "GrowthFactor": 100,
        "Name": "instant",
        "ReplicateTo": "NONE"
      },
      "Type": "AWS::AppConfig::DeploymentStrategy"
    },
    "[Environment]": {
      "Properties": {
        "ApplicationId": {
          "Ref": "[AppConfigApp]"
        },
        "Name": "prod"
      },
      "Type": "AWS::AppConfig::Environment"
    }
  }
}
