cloud-infra/tests/snapshots/snapshots__cloudfront_with_s3_origin.snap
---
source: cloud-infra/tests/snapshots.rs
expression: synthesized
---
{
  "Metadata": {
    "bucket": "[S3Bucket]",
    "distro": "[CloudFrontDistribution]",
    "oac": "[OAC]",
    "originId-website-s3-policy": "[S3BucketPolicy]",
    "policy": "[CachePolicy]"
  },
  "Resources": {
    "[CachePolicy]": {
      "Properties": {
        "CachePolicyConfig": {
          "DefaultTTL": 5,
          "MaxTTL": 30,
          "MinTTL": 0,
          "Name": "unique-pol-name",
          "ParametersInCacheKeyAndForwardedToOrigin": {
            "CookiesConfig": {
              "CookieBehavior": "all"
            },
            "EnableAcceptEncodingGzip": false,
            "HeadersConfig": {
              "HeaderBehavior": "whitelist",
              "Headers": [
                "authorization"
              ]
            },
            "QueryStringsConfig": {
              "QueryStringBehavior": "all"
            }
          }
        }
      },
      "Type": "AWS::CloudFront::CachePolicy"
    },
    "[CloudFrontDistribution]": {
      "Properties": {
        "DistributionConfig": {
          "DefaultCacheBehavior": {
            "CachePolicyId": {
              "Fn::GetAtt": [
                "[CachePolicy]",
                "Id"
              ]
            },
            "TargetOriginId": "originId",
            "ViewerProtocolPolicy": "redirect-to-https"
          },
          "DefaultRootObject": "",
          "Enabled": true,
          "Origins": [
            {
              "DomainName": {
                "Fn::GetAtt": [
                  "[S3Bucket]",
                  "RegionalDomainName"
                ]
              },
              "Id": "originId",
              "OriginAccessControlId": {
                "Fn::GetAtt": [
                  "[OAC]",
                  "Id"
                ]
              },
              "S3OriginConfig": {}
            }
          ]
        }
      },
      "Type": "AWS::CloudFront::Distribution"
    },
    "[OAC]": {
      "Properties": {
        "OriginAccessControlConfig": {
          "Name": "myoac",
          "OriginAccessControlOriginType": "s3",
          "SigningBehavior": "always",
          "SigningProtocol": "sigv4"
        }
      },
      "Type": "AWS::CloudFront::OriginAccessControl"
    },
    "[S3Bucket]": {
      "Properties": {
        "BucketName": "sam-cloudfront-test",
        "PublicAccessBlockConfiguration": {
          "BlockPublicAcls": false,
          "IgnorePublicAcls": false,
          "RestrictPublicBuckets": false
        }
      },
      "Type": "AWS::S3::Bucket"
    },
    "[S3BucketPolicy]": {
      "Properties": {
        "Bucket": {
          "Ref": "[S3Bucket]"
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject"
              ],
              "Condition": {
                "StringEquals": {
                  "AWS:SourceArn": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:aws:cloudfront::",
                        {
                          "Ref": "AWS::AccountId"
                        },
                        ":distribution/",
                        {
                          "Fn::GetAtt": [
                            "[CloudFrontDistribution]",
                            "Id"
                          ]
                        }
                      ]
                    ]
                  }
                }
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "cloudfront.amazonaws.com"
              },
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "[S3Bucket]",
                          "Arn"
                        ]
                      },
                      "/*"
                    ]
                  ]
                }
              ]
            }
          ],
          "Version": "2012-10-17"
        }
      },
      "Type": "AWS::S3::BucketPolicy"
    }
  }
}
