cloud-infra/tests/snapshots/snapshots__lambda_with_secret_and_custom_permissions.snap
---
source: cloud-infra/tests/snapshots.rs
expression: synthesized
---
{
  "Metadata": {
    "fun": "[LambdaFunction]",
    "funLogGroup": "[LogGroup]",
    "funRole": "[LambdaFunctionRole]"
  },
  "Resources": {
    "[LambdaFunction]": {
      "Properties": {
        "Architectures": [
          "arm64"
        ],
        "Code": {
          "S3Bucket": "some-bucket",
          "S3Key": "[Asset]"
        },
        "Environment": {
          "Variables": {
            "SECRET": {
              "Ref": "[SecretsManagerSecret]"
            }
          }
        },
        "Handler": "bootstrap",
        "LoggingConfig": {
          "LogGroup": {
            "Ref": "[LogGroup]"
          }
        },
        "MemorySize": 512,
        "Role": {
          "Fn::GetAtt": [
            "[LambdaFunctionRole]",
            "Arn"
          ]
        },
        "Runtime": "provided.al2023",
        "Timeout": 30
      },
      "Type": "AWS::Lambda::Function"
    },
    "[LambdaFunctionRole]": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": [
                "sts:AssumeRole"
              ],
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition"
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
              ]
            ]
          }
        ],
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": [
                    "secretsmanager:Get*"
                  ],
                  "Effect": "Allow",
                  "Resource": [
                    "*"
                  ]
                }
              ],
              "Version": "2012-10-17"
            },
            "PolicyName": "my-perm"
          }
        ]
      },
      "Type": "AWS::IAM::Role"
    },
    "[LogGroup]": {
      "Properties": {
        "RetentionInDays": 731
      },
      "Type": "AWS::Logs::LogGroup"
    }
  }
}
