cloud-infra/tests/snapshots/snapshots__lambda_with_sns_subscription.snap
---
source: cloud-infra/tests/snapshots.rs
expression: synthesized
---
{
  "Metadata": {
    "fun": "[LambdaFunction]",
    "funLogGroup": "[LogGroup]",
    "funRole": "[LambdaFunctionRole]",
    "topic": "[SnsTopic]",
    "topicfun": "[SnsSubscription]",
    "topicfunPermission": "[LambdaPermission]"
  },
  "Resources": {
    "[LambdaFunction]": {
      "Properties": {
        "Architectures": [
          "arm64"
        ],
        "Code": {
          "S3Bucket": "some-bucket",
          "S3Key": "[Asset]"
        },
        "Handler": "bootstrap",
        "LoggingConfig": {
          "LogGroup": {
            "Ref": "[LogGroup]"
          }
        },
        "MemorySize": 512,
        "Role": {
          "Fn::GetAtt": [
            "[LambdaFunctionRole]",
            "Arn"
          ]
        },
        "Runtime": "provided.al2023",
        "Timeout": 30
      },
      "Type": "AWS::Lambda::Function"
    },
    "[LambdaFunctionRole]": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": [
                "sts:AssumeRole"
              ],
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition"
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
              ]
            ]
          }
        ],
        "Policies": []
      },
      "Type": "AWS::IAM::Role"
    },
    "[LambdaPermission]": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "[LambdaFunction]",
            "Arn"
          ]
        },
        "Principal": "sns.amazonaws.com",
        "SourceArn": {
          "Ref": "[SnsTopic]"
        }
      },
      "Type": "AWS::Lambda::Permission"
    },
    "[LogGroup]": {
      "Properties": {
        "RetentionInDays": 731
      },
      "Type": "AWS::Logs::LogGroup"
    },
    "[SnsSubscription]": {
      "Properties": {
        "Endpoint": {
          "Fn::GetAtt": [
            "[LambdaFunction]",
            "Arn"
          ]
        },
        "Protocol": "lambda",
        "TopicArn": {
          "Ref": "[SnsTopic]"
        }
      },
      "Type": "AWS::SNS::Subscription"
    },
    "[SnsTopic]": {
      "Properties": {
        "FifoTopic": false
      },
      "Type": "AWS::SNS::Topic"
    }
  }
}
