cloud-infra/tests/snapshots/snapshots__sqs.snap
---
source: cloud-infra/tests/snapshots.rs
expression: synthesized
---
{
  "Metadata": {
    "queue": "[SqsQueue]"
  },
  "Resources": {
    "[SqsQueue]": {
      "Properties": {
        "ContentBasedDeduplication": true,
        "DelaySeconds": 30,
        "FifoQueue": true,
        "MessageRetentionPeriod": 600
      },
      "Type": "AWS::SQS::Queue"
    }
  }
}
